--- a/Sports Statistics Application/admin.html
+++ b/Sports Statistics Application/admin.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./CSS/style.css" />
   <title>Admin | NBA</title>
 </head>
 
 <body onload="start()">
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="">
-        <img src="./nbaLogo.png" height="500" width="100" />
+      <a class="navbar-item" href="index.html">
+        <img src="./images/nbaLogo.png" height="500" width="100" />
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -140,8 +140,8 @@
       </div>
     </div>
 </body>
-<script src="teams.js"></script>
-<script src="script.js"></script>
+<script src="./JS/script.js"></script>
+  <script src="./JS/teams.js"></script>
 
 <script>
   function start() {
