--- a/Sports Statistics Application/admin.html
+++ b/Sports Statistics Application/admin.html
@@ -64,6 +64,8 @@
     </div>
   </nav>
 
+  <div id="message"></div>
+
   <div class="container mt-4">
     <div class="card has-background-link">
       <div class="card-content login">
@@ -134,14 +136,16 @@
           </div>
 
           <div class="has-text-centered">
-            <button onclick="storeGame()" class="button has-background-link has-text-white mt-4">Submit</button>
+            <a href="admin.html">
+              <button onclick="storeGame()" class="button has-background-link has-text-white mt-4">Submit</button>
+            </a>
           </div>
         </div>
       </div>
     </div>
 </body>
 <script src="./JS/script.js"></script>
-  <script src="./JS/teams.js"></script>
+<script src="./JS/teams.js"></script>
 
 <script>
   function start() {
