fixed standings table

--- a/Sports Statistics Application/index.html
+++ b/Sports Statistics Application/index.html
@@ -78,7 +78,7 @@
     </nav>
     <!-- add table with headers, rest is done in javascript-->
     <div class="columns">
-      <div class="column is-one-third">
+      <div class="column is-half">
         <div class="container mt-4 ml-5">
           <table
             id="Estandings"
@@ -110,8 +110,8 @@
           </table>
         </div>
       </div>
-      <div class="column is-one-third is-offset-one-fifth">
-        <div class="container mt-4">
+      <div class="column">
+        <div class="container mt-4 mr-3">
           <table
             id="Wstandings"
             class="table is-striped is-hoverable is-fullwidth"
