--- a/Sports Statistics Application/games.html
+++ b/Sports Statistics Application/games.html
@@ -98,7 +98,7 @@
         <div class="column" id="allGames"></div>
       </div>
 
-      <nav id="paginator"></nav>
+      <nav id="paginator" class="pagination is-centered"></nav>
     </div>
   </body>
   <script src="./JS/script.js"></script>
