put message in container

--- a/Sports Statistics Application/admin.html
+++ b/Sports Statistics Application/admin.html
@@ -64,9 +64,12 @@
     </div>
   </nav>
 
-  <div id="message"></div>
+  
 
-  <div class="container mt-4">
+  <div class="container mt-4" id="admin-container">
+
+    <div id="message"></div>
+
     <div class="card has-background-link">
       <div class="card-content login">
         <form id="gameForm">
