--- a/Sports Statistics Application/games.html
+++ b/Sports Statistics Application/games.html
@@ -91,9 +91,7 @@
 
       <div id="pageDate"></div>
 
-      <div class="columns">
-        <div class="column" id="allGames"></div>
-      </div>
+      <div class="columns" id="allGames"></div>
 
       <nav id="paginator" class="pagination is-centered"></nav>
     </div>
