--- a/Sports Statistics Application/teams.html
+++ b/Sports Statistics Application/teams.html
@@ -79,6 +79,7 @@
         <p class="title has-text-centered has-text-link-dark" id="teamName"></p>
       </div>
     </section>
+
     <div class="container mt-2 mb-6">
       <nav
         class="level has-background-link-dark p-6 has-text-white"
@@ -111,7 +112,7 @@
       </nav>
 
       <!-- Panel of games -->
-      <div class="columns" id="allGames"></div>
+      <div class="container" id="allGames"></div>
 
       <nav id="paginator" class="pagination is-centered"></nav>
     </div>
