commented out credentials

--- a/AsyncJavaScript/sendMessage.html
+++ b/AsyncJavaScript/sendMessage.html
@@ -60,7 +60,7 @@
         let message = document.getElementById("message").value
 
         let myHeaders = new Headers();
-        const credentials = btoa("AC63ec4771c4421bfd774e6117b0399c51:5131e6b61d1de46aa0068a992c2a087a")
+        //const credentials = btoa("AC63ec4771c4421bfd774e6117b0399c51:0f803dacbe5fbfe7d341c3c8a1ebebdc")
         myHeaders.append("Authorization", `Basic ${credentials}`);
         myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
 
