--- a/vue-projects/vue3-intro/conditional-rendering/index.html
+++ b/vue-projects/vue3-intro/conditional-rendering/index.html
@@ -21,6 +21,12 @@
             </div>
             <div class="product-info">
                <h1>{{ product }}</h1>
+               <p v-if="inventory > 10">In Stock</p>
+               <p v-else-if="inventory > 0"> Almost Sold Out</p>
+               <p v-else>Out of Stock</p>
+
+               <p v-show="onSale"> On Sale</p>
+
             </div>
          </div>
       </div>
