--- a/vue-projects/vue3-intro/attribute-binding/index.html
+++ b/vue-projects/vue3-intro/attribute-binding/index.html
@@ -17,7 +17,9 @@
       <div class="product-display">
          <div class="product-container">
             <div class="product-image">
-               <!-- image goes here -->
+               <a :href="url">
+                  <img :src="image">
+               </a>
             </div>
             <div class="product-info">
                <h1>{{ product }}</h1>
