--- a/vue-projects/vue3-intro/list-rendering/index.html
+++ b/vue-projects/vue3-intro/list-rendering/index.html
@@ -23,6 +23,15 @@
                <h1>{{ product }}</h1>
                <p v-if="inStock">In Stock</p>
                <p v-else>Out of Stock</p>
+               <ul>
+                  <li v-for="detail in details">{{detail}}</li>
+               </ul>
+               <ul>
+                  <li :key="variant.id" v-for="variant in variants">{{variant.colour}}</li>
+               </ul>
+               <ul>
+                  <li v-for="size in sizes">{{size}}</li>
+               </ul>
             </div>
          </div>
       </div>
