--- a/vue-projects/vue3-intro/components-and-props/index.html
+++ b/vue-projects/vue3-intro/components-and-props/index.html
@@ -12,11 +12,17 @@
 
 <body>
    <div id="app">
-      <h1>Product goes here</h1>
+      <div class="nav-bar"></div>
+      <div class="cart">Cart {{cart}}</div>
+      <product-display :premium="premium"></product-display>
    </div>
 
    <!-- Import Js -->
    <script src="./main.js"></script>
+   <script src="./components/ProductDisplay.js"></script>
+   <script>
+      const mountedApp = app.mount('#app')
+   </script>
 </body>
 
 </html>
