--- a/vue-projects/vue3-intro/class-style-binding/index.html
+++ b/vue-projects/vue3-intro/class-style-binding/index.html
@@ -19,7 +19,7 @@
       <div class="product-display">
          <div class="product-container">
             <div class="product-image">
-               <img v-bind:src="image">
+               <img :class="[!inStock ? 'out-of-stock-img' : '']" v-bind:src="image">
             </div>
             <div class="product-info">
                <h1>{{ product }}</h1>
@@ -28,10 +28,13 @@
                <ul>
                   <li v-for="detail in details">{{ detail }}</li>
                </ul>
+               <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
+                  class="color-circle" :style="{ backgroundColor: variant.color }">
+               </div>
+               <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" @click="addToCart">
+                  Add to Cart
+               </button>
 
-               <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">
-                  {{ variant.color }}</div>
-               <button class="button" @click="addToCart">Add to Cart</button>
             </div>
          </div>
       </div>
