--- a/vue-projects/vue3-intro/components-and-props/index.html
+++ b/vue-projects/vue3-intro/components-and-props/index.html
@@ -15,11 +15,15 @@
       <div class="nav-bar"></div>
       <div class="cart">Cart {{cart}}</div>
       <product-display :premium="premium"></product-display>
+
+
    </div>
 
    <!-- Import Js -->
    <script src="./main.js"></script>
    <script src="./components/ProductDisplay.js"></script>
+   <script src="./components/ProductDetails.js"></script>
+
    <script>
       const mountedApp = app.mount('#app')
    </script>
